[ODM-1900] Add useTooltipHandler and fix z-index for tooltip

--- a/src/components/tooltip/tooltip.module.css
+++ b/src/components/tooltip/tooltip.module.css
@@ -19,6 +19,7 @@
 
 .popperContainer {
     pointer-events: none;
+    z-index: var(--gs-z-index-tooltip);
 }
 
 .tooltipContainer[data-placement^="top"] {
